# uxdev

platform_template/: platform.cpp  platform.h
src/: _clang-format  main.cpp  meson.build
src/ux/: api.h  data_layer.cpp  document_management.cpp  element_object.cpp  event_dispatcher.cpp  meson.build  platform_module.cpp  window.cpp
src/ux/base/: data_layer.h  document_management.cpp  document_management.h  element_object.h  elements.h  event_dispatcher.h  options.h  platform_driver.cpp  platform_driver.h  platform_driver_interface.h  utility.h  window.cpp  window.h
src/ux/gui_cef/: platform.cpp
src/ux/gui_clutter/: platform.cpp  platform.h
src/ux/gui_enlightenment_efl/: platform.cpp
src/ux/gui_gtkmm/: platform.cpp
src/ux/gui_sdl/: platform.h
src/ux/gui_sfml/: platform.cpp  platform.h
src/ux/gui_skia/: platform.h
src/ux/include/: api.h  document_management.h  event.h  event_dispatcher.h  platform_module.h  std_base.h
src/ux/modules/: meson.build
src/ux/modules/gui_cef/: gui_cef.h
src/ux/modules/gui_enlightenment_efl/: gui_enlightenment_efl.h
src/ux/modules/gui_gtkmm/: gui_gtkmm.h
src/ux/modules/gui_sdl/: gui_sdl.cpp
src/ux/modules/gui_skia/: gui_skia.cpp
src/ux/modules/tui_ncurses/: meson.build  tui_ncurses.cpp  tui_ncurses.h
src/ux/tui_ncurses/: object.h
uxdev/: main.cpp
uxdev/ux/base/: event_dispatcher.h  platform_driver.cpp  window.h
